--- a/Lab 2 - Flexbox & Grid/gridticket/index.html
+++ b/Lab 2 - Flexbox & Grid/gridticket/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="css/style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="pic">
-    <header>
-        <h1>
-            WEAREIMD
-        </h1>
+      <header>
+        <h1>WEAREIMD</h1>
         <p>LIVE PROGRAMMING MUSIC</p>
-    </header>
-    <div class="image">
-        <img src="/images/qrcode.png" alt="qrcode">
-    </div>
-    <div class="ticket-details">
+      </header>
+
+      <div class="image">
+        <img src="/images/qrcode.png" alt="qrcode" />
+      </div>
+
+      <div class="ticketdetails">
         <div class="date">Feb 29</div>
         <div class="admit">Admit one</div>
         <div class="price">Ticket €15</div>
-        <div class="display-none">Being frustrated with CSS Grid is included in the ticket price</div>
+        <div class="display-none">
+          Being frustrated with CSS Grid is included in the ticket price
+        </div>
+      </div>
     </div>
-    </div>
-</body>
+  </body>
 </html>
