feat: finished ticket

--- a/Lab 2 - Flexbox & Grid/gridticket/index.html
+++ b/Lab 2 - Flexbox & Grid/gridticket/index.html
@@ -8,24 +8,23 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="pic">
+    <div class="grid">
       <header>
-        <h1>WEAREIMD</h1>
-        <p>LIVE PROGRAMMING MUSIC</p>
+          <h1>WeAreImd</h1>
+          <p>Live programming music</p>
       </header>
 
       <div class="image">
-        <img src="/images/qrcode.png" alt="qrcode" />
+          <img src="https://pngimg.com/uploads/qr_code/qr_code_PNG25.png" alt="qrcode">
       </div>
 
-      <div class="ticketdetails">
-        <div class="date">Feb 29</div>
-        <div class="admit">Admit one</div>
-        <div class="price">Ticket €15</div>
-        <div class="display-none">
-          Being frustrated with CSS Grid is included in the ticket price
-        </div>
+      <div class="ticket-details">
+          <div class="date">Feb 29</div>
+          <div class="admit">Admit one</div>
+          <div class="price">Ticket €15</div>
+          <div class="display-none">Being frustrated with CSS Grid is included in the ticket price</div>
       </div>
-    </div>
+
+  </div>
   </body>
 </html>
