--- a/Lab 3 - ES6/index.html
+++ b/Lab 3 - ES6/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
