feat: add lab 3

--- a/Lab 3 - ES6/index.html
+++ b/Lab 3 - ES6/index.html
@@ -15,7 +15,7 @@
       <h1>IMDo App</h1>
 
       <div id="todo-add-item">
-        <input placeholder="Add your ToDo..." type="text" id="add-item-text" />
+        <input placeholder="medium:Learn ES6" type="text" id="add-item-text" />
       </div>
       <ul id="todo-list">
       </ul>
