--- a/Lab 4 - API/index.html
+++ b/Lab 4 - API/index.html
@@ -6,16 +6,25 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>Vite App</title>
   </head>
-  <body >
-    <div id="app">
-      <div class="weather-info">
-        <h1 class="place">Loading</h1>
-        <h3 class="summary"></h3>
-        <h2 class="temp"></h2>
-        <span class="max"></span>
-        <span class="min"></span>
+  <body>
+    <div class="body">
+      <div id="app">
+        <div class="weather-info">
+          <h1 class="place">Loading</h1>
+          <h3 class="summary"></h3>
+          <h2 class="temp"></h2>
+          <span class="max"></span>
+          <span class="min"></span>
+        </div>
+      </div>
+      <div>
+        <p class="sport"></p>
+        <img class="sport-thumb" src="" alt="">
       </div>
     </div>
     <script type="module" src="/main.js"></script>
